# python-rest-api

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  main.py  mypy.ini  pylintrc  pyproject.toml
auth/data/: abstract_repository.py  db_repository.py
auth/domain/: domain_models.py
auth/domain/use_cases/: create_auth_user_use_case.py
auth/tests/data/: test_db_repository.py
auth/tests/domain/use_cases/: test_create_auth_user_use_case.py
core/: base_models.py  managers.py  models.py  testing.py
core/migrations/: 0001_initial.py
project/: settings.py  urls.py
