[project]
name = "python-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-stubs>=5.2.2",
    "djangorestframework-stubs>=3.16.1",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pylint>=3.3.7",
]
